# TutorialForCLang

./: .clang-format  .gitignore  README.md  _sidebar.md  index.html  search_plus_index.json  sitemap.xml  异常处理.html
.devcontainer/: devcontainer.json
book/: README.md  (+2 more)
examples/工具链/交互工具链/制作命令行工具/geo2json/: CMakeLists.txt
examples/工具链/交互工具链/制作命令行工具/geo2json/src/: geo2json.c
examples/工具链/交互工具链/制作命令行工具/sqrt_argparse/: CMakeLists.txt
examples/工具链/交互工具链/制作命令行工具/sqrt_argparse/src/: sqrt_argparse.cc
examples/工具链/交互工具链/制作命令行工具/sqrt_opt/: CMakeLists.txt
examples/工具链/测试工具/simpletest/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
examples/工具链/测试工具/simpletest/Testing/Temporary/: CTestCostData.txt
examples/工具链/测试工具/simpletest/cmake/: CodeCoverage.cmake
examples/工具链/测试工具/simpletest/inc/: binary_vector.hpp
examples/工具链/测试工具/simpletest/src/: binary_vector.cc
examples/工具链/测试工具/simpletest/test/: minunit.h  test_bdd.cc  test_benchmark.cc  test_tdd.cc
examples/工具链/编译工具链/项目管理/vector/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt_bak  CMakeLists.txt_static  CMakeLists.txt_with_share  CMakeLists.txt_withshare  Makefile  cmake_install.cmake
ipynbs/codes/C1_C_tools/test_tool/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
ipynbs/codes/C1_C_tools/test_tool/Testing/Temporary/: CTestCostData.txt
ipynbs/codes/C1_C_tools/test_tool/include/: strformat.h
ipynbs/codes/C1_C_tools/test_tool/lib/: libvector.dylib
ipynbs/codes/C1_C_tools/test_tool/src/: strformat.c
ipynbs/codes/C1_C_tools/test_tool/test/: test_main.c  testcase.c
ipynbs/codes/C2_exception/exception/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Doxyfile  Makefile  cmake_install.cmake  install_manifest.txt
ipynbs/codes/C2_exception/exception/document/: make.bat
ipynbs/codes/C2_exception/exception/document/_build/doctrees/: index.doctree
ipynbs/codes/C2_exception/exception/document/_build/html/: .buildinfo  index.html  objects.inv
ipynbs/codes/C2_exception/exception/document/xml/: assert_8h.xml  index.xml  struct_except___frame.xml  struct_except___t.xml  struct_t.xml
ipynbs/codes/C2_exception/exception/html/: annotated.html  assert_8h.html  assert_8h_source.html  classes.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_8f2980731aba7ec7b9fcae5764f196e3.html  error_8h.html  error_8h_source.html  except_8h.html  except_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  globals_vars.html  index.html  menudata.js  struct_except___frame.html  struct_except___t.html  struct_exception___frame.html  struct_exception___t.html
ipynbs/codes/C2_exception/exception/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_5.js  all_6.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.html  enums_0.js  enumvalues_0.js  files_1.js  functions_0.js  functions_1.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  variables_4.js  variables_5.js
ipynbs/codes/C2_exception/exception/include/: assert.h  except.h
ipynbs/codes/C2_exception/exception/source/include/: assert.h  error.h  except.h
ipynbs/codes/C2_exception/exception/source/lib/: libexception.dylib
ipynbs/codes/C2_exception/exception/source/src/: assert.c  error.c  except.c
ipynbs/codes/C2_exception/exception/src/: assert.c
ipynbs/codes/C2_exception/exception/test/: test_main.c
ipynbs/codes/C3_data_model/memory/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
ipynbs/codes/C3_data_model/memory/html/: globals_defs.html  menudata.js
ipynbs/codes/C3_data_model/memory/html/search/: all_1.js  defines_2.html  searchdata.js  variables_0.js
ipynbs/codes/C3_data_model/memory/include/: memory.h
ipynbs/codes/C3_data_model/memory/memory/include/: except.h
ipynbs/codes/C3_data_model/memory/source/include/: memory.h
ipynbs/codes/C3_data_model/memory/src/: memcheck.c  memcmp.c  memmove.c
ipynbs/codes/C3_data_model/memory/src/memory/: memmove.c
ipynbs/codes/C3_data_model/memory/third_part/exception/: CMakeLists.txt
ipynbs/codes/C3_data_model/memory/third_part/exception/include/: except.h
ipynbs/codes/C3_data_model/memory/thirdpart/include/: assert.h  except.h
ipynbs/codes/C3_data_model/memorypool/: CMakeLists.txt
ipynbs/codes/C3_data_model/memorypool/html/: dir_8f2980731aba7ec7b9fcae5764f196e3.html  globals.html  memorypool_8h_source.html  menudata.js  struct_memory_pool___t.html
ipynbs/codes/C3_data_model/memorypool/html/search/: typedefs_0.js  variables_0.js
ipynbs/codes/C3_data_model/memorypool/include/: memorypool.h
ipynbs/codes/C3_data_model/memorypool/source/include/: except.h
ipynbs/codes/C4_io_and_string/format/: CMakeLists.txt  Doxyfile
ipynbs/codes/C4_io_and_string/format/format/include/: assert.h  format.h
ipynbs/codes/C4_io_and_string/format/format/src/: format.c
ipynbs/codes/C4_io_and_string/format/html/: index.html
ipynbs/codes/C4_io_and_string/format/html/search/: all_4.js
ipynbs/codes/C7_data_struct/stack/: CMakeLists.txt
ipynbs/codes/C7_data_struct/stack/include/: stack.h
ipynbs/codes/C7_data_struct/stack/source/include/: except.h  stack.h
ipynbs/codes/C7_data_struct/stack/source/src/: assert.c  memcmp.c  stack.c
ipynbs/codes/C7_data_struct/stack/src/: stack.c
ipynbs/codes/C7_data_struct/stack/test/: test_main.c
src/工具链/code/create_cmdline_tool/sqrt_opt/: CMakeCache.txt  CMakeLists.txt
src_bak/数据模型/code/memory/: CMakeLists.txt  cmake_install.cmake  install_manifest.txt
src_bak/数据模型/code/memory/html/: dir_8f2980731aba7ec7b9fcae5764f196e3.html  files.html  memory_8h.html
src_bak/数据模型/code/memory/html/search/: all_3.js  defines_3.html  functions_0.js
与Python交互/C程序中嵌入python解释器/emb/: README.md  pyproject.toml  setup.py
与Python交互/C程序中嵌入python解释器/emb/emb/: emb.cpp
与Python交互/C程序中嵌入python解释器/emb/src/: emb.cpp  embc.cpp  embc.h
工具链/编译工具链/项目管理/vector/: CMakeLists.txt  CMakeLists.txt_static  CMakeLists.txt_with_share
(+578 files in other folders)
