[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emb"
version = "0.0.1"
authors = [{ name = "hsz", email = "hsz1273327@mail.com" }]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
description = "A sample C ext project for test."
keywords = ["test"]
license = { file = "LICENSE" }
dynamic = ["readme"]
requires-python = ">=3.10"


[tool.setuptools]
platforms = ["all"]
include-package-data = true

[tool.setuptools.dynamic]
readme = { file = ["README.md"], content-type = "text/markdown" }

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd", "*.h", "*.c", "*.hpp", "*.cpp"]

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'test']
